--- a/.verb.md
+++ b/.verb.md
@@ -1,6 +1,45 @@
 ## What does this do?
 
-Typically, URL rewriting is used for replacing semantic, user-friendly URLs with server-friendly URLs.
+This module does something similar to [URL rewriting](#url-rewriting), but for static paths at build-time. The goal is consistently and easily generate correct destination paths during development, regardless of the source paths.
+
+**Examples**
+
+Let's say we have a blog, and we want to:
+
+- automatically write blog posts to the root of our site
+- use the slugified `title` from front-matter as the folder name (for "pretty" permalinks)
+- append `/index.html` to the path (also for "pretty" permalinks)
+
+In other words, we want this source path:
+
+```
+src/content/posts/2017-02-14.md
+```
+
+To be written to a destination path that looks something like:
+
+```
+blog/how-to-create-effective-permalinks/index.html
+```
+
+You can either manually parse and reformat your destination paths, or use this library with simple rewrite rules. 
+
+**Example rewrite rule**
+
+The following rule(s) will match any files in the `posts` directory, and rewrite the path using the given [structure](https://github.com/jonschlinkert/permalinks#structure).
+
+```js
+rewriter.rule(/posts\//, 'blog/:slugify(title)/index.html');
+// add extra validation if necessary
+rewriter.rule(/posts\//, 'blog/:slugify(title)/index.html', function(file) {
+  return file.extname === '.md';
+});
+```
+
+<a name="url-rewriting"></a>
+<details>
+<summary><strong>URL rewriting</strong></summary>
+URL rewriting is used for replacing semantic, user-friendly URLs with server-friendly URLs.
 
 For example, when a user enters a URL like the following to go to a page on wikipedia:
 
@@ -13,25 +52,15 @@ The URL might be rewritten by wikipedia to something like:
 ```
 https://en.wikipedia.org/w/index.php?title=Business
 ```
-
-### Static rewriting
-
-This module does something similar, but for static paths at build-time.
-
-**Example**
-
-```js
-
-```
-
-
 </details>
 
+
 ## Usage
+Add this library to your JavaScript application with the following line of code:
 
 ```js
 var Rewriter = require('{%= name %}');
 ```
 
-## Docs
+## API
 {%= apidocs("index.js") %}
